2012-06-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amrestore.pl: Typo.

2012-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amrestore.pl: Use the blocksize argument.

2012-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Print to debug if bc2lb change the
	  label for a barcode. Print to debug the mtx output.
	* perl/Amanda/Taper/Scribe.pm: Do not use a tape if the barcode from
	  tapelist differ from the changer.

2012-05-28  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amzfs-sendrecv.pl: fix print_to_server argument.

2012-05-24  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsamba.pl: Do not send a chomped line to index.

2012-05-24  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Application.swg: Use IO::Handle to open mesgout.

2012-05-23  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Add project_id.
	* device-src/s3.c: Add project_id. Add x-goog-project-id and
	  x-goo-api-version to headers.
	* device-src/s3.h (s3_make_bucket, s3_is_bucket_exists) Add project_id
	  argument.
	* man/xml-source/amanda-devices.7.xml: Document project-id property.

2012-05-23  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Call s3_open2 after setting properties.
	* device-src/s3.c (s3_open2): New function.
	* device-src/s3.h (s3_open2): Prototype.

2012-05-17 Dan Locks <dwlocks@zmanda.com>
	* packaging/sun-pkg/buildpkg: add missing --with-libcurl= for server

2012-05-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/event.c: Add missing "\n" in debugging.
	* perl/Amanda/Application.swg: Make mesgout autoflush.

2012-05-15  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Device.pl: Correctly count NDMP test.

2012-05-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: Abort if log file already exists.

2012-05-15  Jean-Louis Martineau <martineau@zmanda.com>